# dotatui

./: .gitignore  Cargo.toml  README.md  ui.rs
src/: app.rs  config.rs  error.rs  event.rs  git.rs  git_utils.rs  lib.rs  main.rs  tui.rs  ui.rs
