[package]
name = "dotatui"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = { version = "0.26.1", features = ["all-widgets"] }
crossterm = "0.27.0"
git2 = "0.18.3"
tokio = { version = "1.36.0", features = ["full"] }
anyhow = "1.0.81"
chrono = "0.4.35"
thiserror = "1.0.58" # <-- THIS WAS THE MISSING DEPENDENCY

[dev-dependencies]
tempfile = "3.10.1"
